Modificare .gitignore pentru a ignora fisiere specifice IntelliJ

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
+.idea/**/GeoEdu.iml
 .idea/dictionaries
 
 # Sensitive or high-churn files:
