Adaugare clasa pentru foaie de raspunsuri
De asemenea, se rectifica .gitignore pentru a ignora foldere user-specific pentru IDE.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .idea/**/tasks.xml
 .idea/**/GeoEdu.iml
 .idea/dictionaries
+.idea/copyright
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
