Adaugare clase GUI si integrare Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ group 'CNITV'
 version 'v0.1'
 
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = "VianuEdu.GUI.Window"
 
 sourceCompatibility = 1.8
 
