--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
