--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.3'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.3'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
