--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
 group 'CNITV'
-version 'v0.1'
+version 'v1.0'
+
+build {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.4"
+    }
+}
 
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 mainClassName = "VianuEdu.GUI.Window"
 
